# llm-hayek-roth

./: .gitignore  .secrets.baseline  AGENTS.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
reports/: _tmp_params.json
reports/ablations_latest/: README.md  ablations_summary_easy.csv  ablations_summary_easy.md  ablations_summary_hard.csv  ablations_summary_hard.md  parsing_quality_easy.csv  parsing_quality_easy.md  parsing_quality_hard.csv  parsing_quality_hard.md  quick_stats_easy.json  quick_stats_hard.json  run_metadata.json  sample_texts_easy.json  sample_texts_hard.json
reports/field_k5/: README.md  arm_summary.csv  arm_summary.md  cells.csv  customers.csv  reciprocity_by_rank.csv  reg_matched.csv  reg_matched.md  reg_matched_heterogeneity.csv  reg_matched_heterogeneity.md  reg_total_value.csv  reg_total_value.md  reg_total_value_heterogeneity.csv  reg_total_value_heterogeneity.md  run_metadata.json
reports/field_latest/: README.md  arm_summary.csv  arm_summary.md  cells.csv  customers.csv  reciprocity_by_rank.csv  reg_matched.csv  reg_matched.md  reg_matched_heterogeneity.csv  reg_matched_heterogeneity.md  (+4 more)
tests/: test_analysis.py  test_econometrics.py  test_env.py  test_experiment2_congestion.py  test_field_sim_v2.py  test_field_sim_v2_calibrate.py  test_field_sim_v2_intakes.py  test_field_sim_v2_sensitivity.py  test_llm_ablations.py  test_mechanisms.py  test_openai_client.py  test_plotting.py  test_publishable_field_sim.py  test_regime_sweep.py  test_run_end_to_end.py  test_simulation.py
tests_llm_live/: test_llm_parse_live.py
(+125 files in other folders)
